# stargazer-poc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  extract_stars.py  extract_stars.rb  extract_stars.sh  index.html  test_extract.py  test_parse.py
docs/: index.html  stargazer-poc-2b2abdba728b2227_bg.wasm  stargazer-poc-3be288c07cf6e1bc.js  stargazer-poc-3be288c07cf6e1bc_bg.wasm  stargazer-poc-4242acabef63d098.js  stargazer-poc-4242acabef63d098_bg.wasm  stargazer-poc-65ab2d21d46e2331_bg.wasm  stargazer-poc-72d20f8ccf6d41fe_bg.wasm  stargazer-poc-a99e5b97289419e4.js  stargazer-poc-a99e5b97289419e4_bg.wasm  stargazer-poc-d6875a8350e265ff.js  stargazer-poc-d6875a8350e265ff_bg.wasm  styles-81a9b48b57df764b.css
src/: app.rs  lib.rs
src/components/: controls.rs  mod.rs  quiz_dropdown.rs  score_display.rs  star_map.rs  summary_popup.rs
src/game/: mod.rs  quiz.rs  state.rs
src/utils/: mod.rs  projection.rs
static/: styles.css
tests/: integration_tests.rs
