[package]
name = "stargazer-poc"
version = "0.1.0"
edition = "2021"
authors = ["Rick's Stargazer Project"]
description = """
A star name matching game built with Rust, Yew, and WebAssembly.
Players test their knowledge of star names by identifying stars on an interactive sky map.
"""
repository = "https://github.com/example/stargazer-poc"
license = "MIT"
keywords = ["astronomy", "stars", "game", "wasm", "yew"]
categories = ["games", "wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stargazer-cli"
path = "src/bin/cli.rs"

[dependencies]
# Web framework
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "DomRect",
    "console",
    "Storage",
] }
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI tool (for data generation and testing)
clap = { version = "4.4", features = ["derive"], optional = true }

# Utilities
gloo = { version = "0.11", features = ["timers", "storage", "console", "events"] }
gloo-utils = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }

# Logging
log = "0.4"
wasm-logger = "0.2"

# Error handling
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
cli = ["clap"]

[profile.release]
# Optimize for size in WASM
lto = true
opt-level = "s"
panic = "abort"

[profile.dev]
# Faster compilation in development
opt-level = 1
